# VidKit

./: .coverage  .gitignore  README.md  app.doc.md  pyproject.toml
.github/workflows/: ci.yml
src/vidkit/: __init__.py  config.py  exceptions.py  logging.py
src/vidkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/vidkit/cli/: __init__.py  app.py  output.py
src/vidkit/core/: __init__.py  cleaner.py  ffmpeg.py  outputs.py  probe.py  runner.py  splitter.py  timeparse.py
src/vidkit/models/: __init__.py  media.py  report.py  segments.py
tests/: conftest.py
tests/integration/: test_cli_e2e.py  test_probe_clean.py  test_split.py
tests/unit/: test_cleaner_unit.py  test_cli_unit.py  test_config.py  test_exceptions_models.py  test_ffmpeg_wrapper.py  test_outputs.py  test_runner_unit.py  test_segment_math.py  test_timeparse.py
